Closed Bug 475526 Opened 16 years ago Closed 16 years ago

ASSERTION: XPIManager: output stream doesn't exist: 'mItem->mOutStream', file /Users/dave/mozilla/source/trunk/mozilla/xpinstall/src/nsXPInstallManager.cpp

Categories

(Core Graveyard :: Installer: XPInstall Engine, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
mozilla1.9.2a1

People

(Reporter: mossop, Assigned: mossop)

References

Details

(Keywords: fixed1.9.0.11, fixed1.9.1)

Attachments

(1 file)

bug 389816 and bug 338611 introduced two cases where it is perfectly normal for the xpi request to be cancelled before the output stream for the file has been created which makes this assertion bogus. We should either downgrade this to a warning or something or just remove it entirely.
Attached patch patch rev 1Splinter Review
Actually maybe moving the assertion makes most sense. It will assert if the request was successful but there isn't an output stream.
Assignee: nobody → dtownsend
Status: NEW → ASSIGNED
Attachment #359047 - Flags: superreview?(dveditz)
Attachment #359047 - Flags: review?(dveditz)
Blocks: 474763
Attachment #359047 - Flags: superreview?(dveditz)
Attachment #359047 - Flags: superreview?(benjamin)
Attachment #359047 - Flags: review?(dveditz)
Attachment #359047 - Flags: review?(benjamin)
Attachment #359047 - Flags: superreview?(dveditz)
Attachment #359047 - Flags: superreview?(benjamin)
Attachment #359047 - Flags: review?(dveditz)
Attachment #359047 - Flags: review?(benjamin)
Comment on attachment 359047 [details] [diff] [review] patch rev 1 r/sr=dveditz
Attachment #359047 - Flags: superreview?(dveditz)
Attachment #359047 - Flags: superreview+
Attachment #359047 - Flags: review?(dveditz)
Attachment #359047 - Flags: review+
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9.2a1
Comment on attachment 359047 [details] [diff] [review] patch rev 1 Would like to land this on the 1.9.1 branch. It only affects debug builds so there is basically no risk to the Firefox product.
Attachment #359047 - Flags: approval1.9.1?
Attachment #359047 - Flags: approval1.9.1? → approval1.9.1+
Attachment #359047 - Flags: approval1.9.0.10+
Landed on 1.9.0.x branch: Checking in xpinstall/src/nsXPInstallManager.cpp; /cvsroot/mozilla/xpinstall/src/nsXPInstallManager.cpp,v <-- nsXPInstallManager.cpp new revision: 1.169; previous revision: 1.168 done
Keywords: fixed1.9.0.10
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: