Bug 475526: Move assertion to somewhere it makes sense. r+sr=dveditz